[metadata]
name = memrise
version = 1.2.0
description = Scraping the vocabulary from the Memrise course
long_description = file: README.md
long_description_content_type = text/markdown
author = Joseph Quang
author_email = tquang.sdh20@hcmut.edu.vn
url = https://github.com/tquangsdh20/text2ipa
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32, macOS
classifiers = 
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options.packages.find]
where=memrise

[bdist_wheel]
universal = true

[flake8]
max-line-length = 88
extend-ignore =
    E203

[options]
packages = 
    memrise
install_requires =
    text2ipa==1.4.1
package_dir =
    =.
include_package_data = yes
zip_safe = no
keywords = 
    memrise
    scraping memrise
    memrise scraper
    scraping vocabulary
    vocabulary